fix scroll margin spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,7 @@
   color: #fff;
   text-align: center;
   padding: 5px;
+  z-index: 20000;
 }
 
 .sticky-header ul {
@@ -86,4 +87,16 @@
 
 .border-radius-circle img {
   border-radius: 50%;
+}
+
+#about {
+  scroll-margin-top: 60px;
+}
+
+#skills {
+  scroll-margin-top: 60px;
+}
+
+#experience {
+  scroll-margin-top: 60px;
 }
